--- a/style.scss
+++ b/style.scss
@@ -10,14 +10,16 @@
 
 :root {
   --primary-color: #da1b2e;
+  --primary-color-rgb: 218, 27, 46;
   --secondary-color: #f9d2d6;
   --secondary-color-rgb: 249, 210, 214;
   --border-color: #dfb8bc;
+  --border-color-rgb: 223, 184, 188;
   --spacing: 1rem;
   --spacing-small: 0.5rem;
   --heading-2: 2.4rem;
   --heading-3: 1.6rem;
-  --paragraph: 1.2rem;
+  --paragraph: 1.4rem;
 
   @media screen and (min-width: 768px) {
     --spacing: 2rem;
@@ -38,7 +40,7 @@
 
 html {
   font-size: 62.5%;
-  line-height: 1.5;
+  line-height: 1.6;
   scroll-behavior: smooth;
 }
 
@@ -141,7 +143,15 @@ main {
   }
 
   #mission {
-    padding-block: var(--spacing);
+    padding-inline: var(--spacing);
+    padding-bottom: var(--spacing);
+    background-image: linear-gradient(
+        to left bottom,
+        rgba(var(--secondary-color-rgb), 0.85),
+        rgba(var(--border-color-rgb), 0.85)
+      ),
+      url(./assets/images/ambulance-intern.jpeg);
+    background-size: cover;
 
     .mission-wrapper {
       display: grid;
@@ -151,6 +161,9 @@ main {
         display: flex;
         flex-direction: column;
         gap: var(--spacing);
+        background-color: rgba(white, 0.7);
+        padding: var(--spacing);
+        border-radius: var(--spacing-small);
         p {
           font-size: var(--paragraph);
         }
@@ -203,7 +216,13 @@ main {
   #services {
     padding-inline: var(--spacing);
     padding-bottom: var(--spacing);
-    background-color: rgba(#000, 0.1);
+    background-image: linear-gradient(
+        to left bottom,
+        rgba(var(--secondary-color-rgb), 0.85),
+        rgba(var(--border-color-rgb), 0.85)
+      ),
+      url(./assets/images/equip.jpeg);
+    background-size: cover;
 
     h2 {
       border: none;
@@ -211,6 +230,9 @@ main {
 
     .service-wrapper {
       padding-block: var(--spacing);
+      padding-inline: var(--spacing);
+      background-color: rgba(white, 0.7);
+      border-radius: var(--spacing);
       display: flex;
       flex-direction: column;
       gap: var(--spacing);
@@ -300,6 +322,12 @@ main {
     #team {
       .team-wrapper {
         grid-template-columns: repeat(3, 1fr);
+      }
+    }
+
+    #services {
+      .service-wrapper {
+        border-radius: var(--spacing-small);
       }
     }
   }
