--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,10 @@
   --secondary-color-rgb: 249, 210, 214;
   --border-color: #dfb8bc;
   --border-color-rgb: 223, 184, 188;
+  --wp-color-bg: #075e54;
+  --wp-color-bg-rgb: rgb(7, 94, 84);
+  --wp-color: #25d366;
+  --wp-color-rgb: rgb(37, 211, 102);
 
   --spacing: 2.5rem;
   --spacing-small: 1rem;
@@ -114,6 +118,10 @@ a:visited {
   margin: 0 auto;
 }
 
+.center {
+  text-align: center;
+}
+
 header {
   padding-inline: var(--spacing);
   background-color: rgba(var(--primary-color-rgb), 0.9);
@@ -153,13 +161,62 @@ header {
   }
 }
 
+a.contact {
+  background-color: rgba(var(--primary-color-rgb), 0.75);
+  padding-block: var(--spacing-small);
+  padding-inline: var(--spacing);
+  border-radius: 5rem;
+  box-shadow: var(--box-shadow);
+  display: flex;
+  justify-content: center;
+  cursor: default;
+
+  .button,
+  .phone {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
+    svg {
+      fill: #fff;
+    }
+
+    p {
+      color: #fff;
+      font-weight: 700;
+    }
+  }
+}
+
+.whatsapp {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: var(--spacing);
+
+  a {
+    background-color: var(--wp-color);
+    cursor: pointer;
+  }
+}
+
 main {
   display: grid;
   grid-template-columns: 1fr;
 
   #hero {
+    box-shadow: var(--box-shadow);
     picture {
       overflow: hidden;
+    }
+  }
+
+  #call {
+    padding-inline: var(--spacing);
+
+    .call-wrapper {
+      padding-bottom: var(--spacing);
+      display: grid;
+      gap: var(--spacing);
     }
   }
 
@@ -407,6 +464,18 @@ footer {
 
   main {
     padding-inline: 0;
+
+    #call {
+      h2 {
+        text-align: center;
+      }
+
+      .call-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
 
     #mission {
       .mission-wrapper {
