feat: gap whatsapp adjust

--- a/style.scss
+++ b/style.scss
@@ -217,7 +217,7 @@ main {
     .call-wrapper {
       padding-bottom: var(--spacing);
       display: grid;
-      gap: var(--spacing);
+      gap: var(--spacing-small);
     }
   }
 
