--- a/style.scss
+++ b/style.scss
@@ -161,6 +161,26 @@ header {
   }
 }
 
+.wp-float {
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  width: 5rem;
+  height: 5rem;
+  background-color: var(--wp-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  box-shadow: var(--box-shadow);
+
+  svg {
+    width: 3rem;
+    height: 3rem;
+    fill: #fff;
+  }
+}
+
 a.contact {
   background-color: rgba(var(--primary-color-rgb), 0.75);
   padding-block: var(--spacing-small);
@@ -438,6 +458,16 @@ footer {
 }
 
 @media screen and (min-width: 768px) {
+  .wp-float {
+    width: 7rem;
+    height: 7rem;
+
+    svg {
+      width: 4rem;
+      height: 4rem;
+    }
+  }
+
   .container {
     max-width: 720px;
     margin: 0 auto;
