--- a/styles.scss
+++ b/styles.scss
@@ -58,6 +58,15 @@ h6 {
   --color-black: #000;
   --section-bg: #efefef;
 
+  --border-color: #dfb8bc;
+  --bg-button: #009aff;
+  --bg-light: #fff;
+  --color-light: #fff;
+  --color-light-rgb: 255, 255, 255;
+
+  --wp-color-bg: #075e54;
+  --wp-color: #25d366;
+
   --p-xs: 1rem;
   --p-sm: 2rem;
   --p-lg: 4rem;
@@ -74,14 +83,6 @@ h6 {
     --font-xs: 2rem;
   }
 }
-
-$border-color: #dfb8bc;
-$bg-button: #009aff;
-$bg-light: #fff;
-$color-light: #fff;
-
-$wp-color-bg: #075e54;
-$wp-color: #25d366;
 
 html {
   font-size: 62.5%;
@@ -103,7 +104,7 @@ a:visited {
 }
 
 header {
-  background-color: rgba($color-light, 0.95);
+  background-color: rgba(var(--color-light-rgb), 0.95);
   position: sticky;
   top: 0;
   z-index: 3;
@@ -132,7 +133,7 @@ header {
         position: absolute;
         top: 100%;
         right: -1rem;
-        background-color: rgba($color-light, 0.9);
+        background-color: rgba(var(--color-light-rgb), 0.9);
         transform: scaleY(0);
         transform-origin: top;
         transition: all 0.05s ease-in;
@@ -214,11 +215,11 @@ header {
   &.light {
     h1,
     p {
-      color: $color-light;
+      color: var(--color-light);
     }
 
     svg {
-      fill: $color-light;
+      fill: var(--color-light);
     }
   }
 }
@@ -253,7 +254,7 @@ header {
 
   h2 {
     text-transform: uppercase;
-    color: $color-light;
+    color: var(--color-light);
     background-color: var(--color-primary);
     display: inline-block;
     padding: var(--p-xs);
@@ -303,19 +304,19 @@ header {
   .button {
     display: flex;
     padding: 1rem;
-    background-color: $bg-button;
+    background-color: var(--bg-button);
     border-radius: var(--p-sm);
     align-items: center;
     justify-content: center;
     gap: 0.5rem;
 
     svg {
-      fill: $bg-light;
+      fill: var(--bg-light);
       width: var(--p-sm);
     }
 
     .number {
-      color: $bg-light;
+      color: var(--bg-light);
       font-weight: 700;
       font-size: 1rem;
     }
@@ -323,7 +324,7 @@ header {
 
   .whatsapp {
     .button {
-      background-color: $wp-color;
+      background-color: var(--wp-color);
     }
   }
 
@@ -362,7 +363,7 @@ header {
 
         svg {
           width: 100%;
-          fill: $bg-light;
+          fill: var(--bg-light);
         }
       }
 
@@ -417,6 +418,8 @@ header {
 footer {
   background-color: var(--color-tertiary);
   padding-block: var(--p-sm);
+  position: relative;
+  z-index: 2;
 
   .footer-wrapper {
     display: grid;
@@ -427,11 +430,26 @@ footer {
     }
 
     .contact {
-      color: $bg-light;
+      color: var(--bg-light);
       text-align: center;
       display: grid;
       gap: 1rem;
     }
+  }
+}
+
+.wp-button {
+  position: fixed;
+  bottom: 4rem;
+  right: 1.5rem;
+  padding: var(--p-xs);
+  background-color: var(--wp-color);
+  border-radius: 50%;
+  z-index: 1;
+  box-shadow: 0 1rem 1rem rgba(black, 0.3);
+
+  svg {
+    fill: var(--bg-light);
   }
 }
 
@@ -456,7 +474,7 @@ footer {
   }
 
   header {
-    background-color: $color-light;
+    background-color: var(--color-light);
 
     .header-wrapper {
       .menu {
@@ -575,6 +593,13 @@ footer {
       }
     }
   }
+
+  .wp-button {
+    padding: var(--p-sm);
+    svg {
+      width: 4rem;
+    }
+  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -656,5 +681,15 @@ footer {
     padding-top: 36rem;
     background-size: 1200px;
     background-position: top center;
+  }
+
+  .wp-button {
+    left: 50%;
+    transform: translateX(570%);
+    right: unset;
+    padding: var(--p-sm);
+    svg {
+      width: 4rem;
+    }
   }
 }
